force-app/main/default/objects/producto_cliente_sucursal__c/producto_cliente_sucursal__c.object-meta.xml
<CustomObject>
    <label>producto-cliente-sucursal</label>
    <nameField>
        <label>producto-cliente-sucursal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>productos-clientes-sucursales</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>