force-app/main/default/objects/producto_cliente_sucursal__c/fields/Grupo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Cliente__c</fullName>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRUPO 1</fullName>
            </value>
            <value>
                <fullName>GRUPO 2</fullName>
            </value>
            <value>
                <fullName>GRUPO 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>