force-app/main/default/objects/producto_cliente_sucursal__c/fields/Oficina_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Venta__c</fullName>
    <label>Oficina de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oficina   1</fullName>
            </value>
            <value>
                <fullName>Oficina   2</fullName>
            </value>
            <value>
                <fullName>Oficina   3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>