force-app/main/default/objects/producto_cliente_sucursal__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>productos-clientes-sucursales</relationshipLabel>
    <relationshipName>productos_clientes_sucursales</relationshipName>
    <type>Lookup</type>
</CustomField>